Added First migration setup

--- a/BirdAPI/appsettings.json
+++ b/BirdAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "BirdAPI": {
-    "ConnectionString": ""
+    "ConnectionString": "Server=DESKTOP-USICC2V;Database=db-bird;Trusted_Connection=True;"
 
   }
 }
