--- a/BirdAPI.Domain/BirdAPI.Domain.csproj
+++ b/BirdAPI.Domain/BirdAPI.Domain.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -10,6 +9,10 @@
   <ItemGroup>
     <Folder Include="Exceptions\" />
     <Folder Include="SeedWork\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
 </Project>
