--- a/BirdAPI/BirdAPI.csproj
+++ b/BirdAPI/BirdAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,14 +7,35 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\Features\" />
+    <Folder Include="Application\Features\Bird\Commands\" />
+    <Folder Include="Application\Features\Bird\ResponseModels\" />
+    <Folder Include="Application\Features\Bird\Queries\" />
+    <Folder Include="Application\Features\Owner\Commands\" />
+    <Folder Include="Application\Features\Owner\Queries\" />
+    <Folder Include="Application\Features\Owner\ResponseModels\" />
     <Folder Include="BaseModels\" />
     <Folder Include="Infrastructure\Migrations\" />
     <Folder Include="Infrastructure\Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<ProjectReference Include="..\BirdAPI.Config\BirdAPI.Config.csproj" />
+    <ProjectReference Include="..\BirdAPI.Domain\BirdAPI.Domain.csproj" />
+    <ProjectReference Include="..\BirdAPI.Infrastructure\BirdAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
