Created endpoint to get the owners from db

--- a/Backend/BirdAPI/BirdAPI.csproj
+++ b/Backend/BirdAPI/BirdAPI.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Application\Features\Owner\Commands\**" />
+    <Content Remove="Application\Features\Owner\Commands\**" />
+    <EmbeddedResource Remove="Application\Features\Owner\Commands\**" />
+    <None Remove="Application\Features\Owner\Commands\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
@@ -28,9 +35,6 @@
 
   <ItemGroup>
     <Folder Include="Application\Features\Bird\ResponseModels\" />
-    <Folder Include="Application\Features\Owner\Commands\" />
-    <Folder Include="Application\Features\Owner\Queries\" />
-    <Folder Include="Application\Features\Owner\ResponseModels\" />
     <Folder Include="Infrastructure\Migrations\" />
     <Folder Include="Infrastructure\Services\" />
   </ItemGroup>
