--- a/BirdFrontEnd/package.json
+++ b/BirdFrontEnd/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "@ngrx/effects": "^15.2.1",
+    "@ngrx/store": "^15.2.1",
+    "@ngrx/store-devtools": "^15.2.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
