--- a/BirdFrontEnd/package.json
+++ b/BirdFrontEnd/package.json
@@ -20,14 +20,15 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
-    "@ngrx/effects": "^15.2.1",
-    "@ngrx/store": "^15.2.1",
-    "@ngrx/store-devtools": "^15.2.1",
-    "ngx-toastr": "^16.0.2",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
+    "@ngrx/store-devtools": "^11.1.1",
+    "ngx-toastr": "^13.2.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.3.1",
     "rxjs": "~6.6.0",
+    "scss-scaffold": "0.0.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
