--- a/BirdFrontEnd/angular.json
+++ b/BirdFrontEnd/angular.json
@@ -5,9 +5,10 @@
   "projects": {
     "BirdFrontEnd": {
       "projectType": "application",
-      "schematics":{
+      "schematics": {
         "@schematics/angular:component": {
-           "style": "scss" }
+          "style": "scss"
+        }
       },
       "root": "",
       "sourceRoot": "src",
@@ -31,6 +32,7 @@
               "node_modules/primeicons/primeicons.css",
               "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
