--- a/Backend/BirdAPI/BirdAPI.csproj
+++ b/Backend/BirdAPI/BirdAPI.csproj
@@ -28,6 +28,10 @@
 
   <ItemGroup>
     <Folder Include="Application\Features\Bird\ResponseModels\" />
+    <Folder Include="Application\Features\Couple\Commands\InputModels\" />
+    <Folder Include="Application\Features\Couple\AutoMapper\" />
+    <Folder Include="Application\Features\Couple\Queries\" />
+    <Folder Include="Application\Features\Couple\ResponseModels\" />
     <Folder Include="Infrastructure\Migrations\" />
     <Folder Include="Infrastructure\Services\" />
   </ItemGroup>
