--- a/Backend/BirdAPI/appsettings.json
+++ b/Backend/BirdAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "BirdAPI": {
-    "ConnectionString": "Server=DESKTOP-USICC2V;Database=db-bird;Trusted_Connection=True;"
+    //"ConnectionString": "Server=DESKTOP-USICC2V;Database=db-bird;Trusted_Connection=True;",
+    "ConnectionString": "AZURE_SQL_CONNECTIONSTRING"
 
   }
 }
