--- a/.github/workflows/master_app-bird-platform.yml
+++ b/.github/workflows/master_app-bird-platform.yml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet tool install -g dotnet-ef
 
       - name: dotnet bundle migration
-        run: dotnet ef migrations bundle --runtime linux-x64 -p BirdAPI/BirdAPI.csproj -o ${{env.DOTNET_ROOT}}/birdAPI/migrate
+        run: dotnet ef migrations bundle --runtime linux-x64 -p Backend/BirdAPI/BirdAPI.csproj -o ${{env.DOTNET_ROOT}}/birdAPI/migrate
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
