--- a/Backend/BirdAPI/appsettings.json
+++ b/Backend/BirdAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "BirdAPI": {
     //"ConnectionString": "Server=DESKTOP-USICC2V;Database=db-bird;Trusted_Connection=True;",
-    "ConnectionString": "Server=app-bird-platform-server.mysql.database.azure.com;Database=app-bird-platform-database;User Id=chscdripmq;Password=T68PY38G02U4D355$"
+    "ConnectionString": "AZURE_SQL_CONNECTIONSTRING"
 
   }
 }
