--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,3 @@
-# Node.js
 # Build a general Node.js project with npm.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
@@ -10,6 +9,10 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: FileTransform@1
+  inputs:
+    folderPath: '$(System.DefaultWorkingDirectory)/**/*.zip'
+
 - task: NodeTool@0
   inputs:
     versionSpec: '10.x'
@@ -19,3 +22,58 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
+# Node.js
+- task: Npm@1
+  inputs:
+    command: 'install'
+    workingDir: 'BirdAPI/BirdFrontend'
+
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    workingDir: 'BirdAPI/BirdFrontend'
+    customCommand: 'run build'
+
+- task: NodeTool@0
+  inputs:
+    versionSource: 'spec'
+    versionSpec: '12.x'
+
+- task: NuGetToolInstaller@1
+  inputs:
+    versionSpec: 
+
+- task: NuGetCommand@2
+  inputs:
+    command: 'restore'
+    restoreSolution: '**/*.sln'
+    feedsToUse: 'select'
+
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: '6.0.100'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    projects: '**/BirdAPI'
+    feedsToUse: 'select'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    projects: '**/BirdAPI'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '**/BirdAPI/bin'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
