--- a/Backend/BirdAPI/BirdAPI.csproj
+++ b/Backend/BirdAPI/BirdAPI.csproj
@@ -31,6 +31,7 @@
     <Folder Include="Infrastructure\Migrations\" />
     <Folder Include="Infrastructure\Services\" />
     <Folder Include="ClientApp\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
