Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,6 @@ steps:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Visual Studio Professional-abonnement(85568886-ad8d-4e96-980c-5f9c77e70513)'
     appType: 'webApp'
-    WebAppName: 'BirdPlatform'
+    WebAppName: 'bird-platform'
     VirtualApplication: 'BirdPlatform'
     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
