--- a/Backend/BirdAPI/appsettings.Development.json
+++ b/Backend/BirdAPI/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "BirdAPI": {
+    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=db-bird;Trusted_Connection=True;"
+    //"ConnectionString": "AZURE_SQL_CONNECTIONSTRING",
   }
 }
