--- a/Backend/BirdAPI/appsettings.json
+++ b/Backend/BirdAPI/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "BirdAPI": {
-    "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=db-bird;Trusted_Connection=True;"
-    //"ConnectionString": "AZURE_SQL_CONNECTIONSTRING"
-
+    "ConnectionString": "Server=tcp:bird-platform.database.windows.net,1433;Initial Catalog=db-bird-platform;Persist Security Info=False;User ID=bird-admin;Password=Zeppos123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"ConnectionString": "AZURE_SQL_CONNECTIONSTRING",
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=fbe3e9b6-dc7e-47f0-b21e-33515b85da1c;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
   }
 }
